syntax = "proto3";

package hanium.common.proto.user;

option java_package = "hanium.common.proto.product";
option java_multiple_files = true;

import "common.proto";

service ProductService {
  // 1. 상품 등록
  rpc RegisterProduct(RegisterProductRequest) returns (ProductResponse);

  // 2. 상품 조회
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
}

// 1. 상품 등록
message RegisterProductRequest {
  string title = 1;
  string content = 2;
  int64 price = 3;
  int64 sellerId = 4;
  string category = 5; // Category enum 문자열
}
message ProductResponse {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 price = 4;
  int64 sellerId = 5;
  string status = 6;    // Status enum 문자열
  string category = 7;
}

// 2. 상품 조회
message GetProductRequest {
  int64 product_id = 1;
}